tests/mm0_mmu/fail/non-ascii2.mmu
--     v- non-break space
(sort s )
